# scopeguard

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 15111a3648bd_initial_schema.py
apps/api/app/: config.py  db.py  deps.py  logging.py  main.py  seed.py  worker.py
apps/api/app/models/: __init__.py  audit.py  base.py  billing.py  contracts.py  core.py  documents.py  enums.py  review.py  work.py
apps/api/app/routers/: allowances.py  artifacts.py  audit_events.py  auth.py  clauses.py  clients.py  contracts.py  customer_requests.py  dashboard.py  decisions.py  documents.py  findings.py  health.py  imports.py  invoices.py  organizations.py  projects.py  rates.py  reports.py  review_runs.py  time_entries.py  users.py  work_items.py
apps/api/app/schemas/: common.py
apps/api/app/security/: passwords.py  rate_limit.py  sessions.py
apps/api/app/services/: artifacts.py  audit.py  citations.py  contract_extraction.py  exports.py  extraction.py  files.py  imports.py  pagination.py  retrieval.py  storage.py
apps/api/app/services/llm/: __init__.py  base.py  fake.py  ollama.py  prompts.py  schemas.py
apps/api/app/services/review/: allowances.py  duplicates.py  engine.py  evidence.py  grouping.py  money.py  reconciliation.py  temporal.py
apps/api/evaluations/: cases.py  run.py
apps/api/prompts/: artifact_draft_v1.txt  contract_extraction_v1.txt  scope_classification_v1.txt
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth_flow.py  test_backup_restore.py  test_imports_and_exports.py  test_review_pipeline.py
apps/api/tests/security/: test_llm_safety.py  test_rbac_and_uploads.py  test_tenant_isolation.py
apps/api/tests/unit/: test_allowances_evidence.py  test_duplicates.py  test_fake_provider.py  test_files_citations.py  test_imports_validation.py  test_money.py  test_temporal.py
apps/web/: Dockerfile  (+7 more)
docs/: ARCHITECTURE.md  BUILD_STATUS.md  DATA_MODEL.md  DEPLOYMENT.md  FINAL_VERIFICATION.md  LIMITATIONS.md  LLM_SAFETY.md  PILOT_GUIDE.md  REQUIREMENTS_TRACEABILITY.md  THREAT_MODEL.md
scripts/: backup.sh  restore.sh
(+40 files in other folders)
