[project]
name = "scopeguard-api"
version = "0.1.0"
description = "ScopeGuard — evidence-backed scope and billing review for consulting firms"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "email-validator>=2.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "argon2-cffi>=23.1",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "minio>=7.2",
    "httpx>=0.27",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-beautifulsoup4",
    "freezegun>=1.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "evaluations*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]
ignore = [
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "SIM102", # nested ifs are sometimes clearer than compound conditions
    "SIM103", # explicit multi-line guards read better than one boolean return
    "SIM108", # if/else can be clearer than a ternary
    "UP046",  # Generic[T] base kept for broad tooling compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F841"]
# Long lines below are verbatim contract/demo text or prompt-assembly f-strings
# that must not be wrapped (wrapping would change the literal content).
"app/seed.py" = ["E501"]
"app/services/extraction.py" = ["E501"]
"app/services/llm/fake.py" = ["E501"]
"app/services/review/engine.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
